# HotTake

./: README.md  package-lock.json
Backend/: Cargo.toml
Backend/src/: main.rs
Frontend/: index.html  package-lock.json  package.json
Frontend/src/: App.css  App.jsx  GlobalState.js  index.css
Frontend/src/components/: ConfirmationModal.jsx  DebateCard.jsx
Frontend/src/models/: Debate.js  User.js
Frontend/src/pages/: CreateDebatePage.jsx  DebatePage.jsx  EditProfilePage.jsx  HomePage.jsx
Frontend/src/services/: DebatesService.js  UserService.js
Frontend/src/styles/: BaseStyles.css  ConfirmationModal.css  CreateDebatePage.css  DebateCard.css  DebatePage.css  EditProfilePage.css  HomePage.css
