[package]
name = "hot-take-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = "0.7"                                          # Handles HTTP requests, routing, JSON parsing
tokio = { version = "1.0", features = ["full"] }       # Provides async / await support needed for networking
tower = "0.4"                                         # Middleware for server
tower-http = { version = "0.5", features = ["cors"] } # Handles CORS

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID for unique IDs
uuid = { version = "1.0", features = ["v4"] }

# WebSocket support for WEBRTC
tokio-tungstenite = "0.20"                            # WebSocket implementation
futures-util = "0.3"                                  # Stream utils for WebSocketf