[package]
name = "hot-take-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework

# Handles HTTP requests, routing, JSON parsing
axum = { version = "0.7", features = ["ws"] }

# Provides async / await support needed for networking
tokio = { version = "1.0", features = ["full"] }

# Middleware for server
tower = "0.4"

# Handles CORS
tower-http = { version = "0.5", features = ["cors"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID for unique IDs
uuid = { version = "1.0", features = ["v4"] }

# WebSocket support for WEBRTC

# WebSocket implementation
tokio-tungstenite = "0.20"

# Stream utils for WebSocket
futures-util = "0.3"

# Adds time functionality
chrono = { version = "0.4", features = ["serde] }